# pyglaz

./: README.md  pyproject.toml  setup.py
configs/: double_spectrometer.xml  single_spectrometer.xml
examples/: basic_example.py  double_detectors_example.py  minimal_example.py
pyglaz/: __init__.py  _bindings.py  utils.py  wrapper.py
